# vllm-omni

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.buildkite/: pipeline.yml
.buildkite/scripts/: simple_test.sh
.github/ISSUE_TEMPLATE/: 400-bug-report.yml  750-RFC.yml
benchmarks/build_dataset/: meta.lst  top1.txt  top10.txt
benchmarks/qwen3-omni/transformers/: eval_qwen3_moe_omni_transformers.sh  eval_qwen3_moe_omni_transformers_nsys.sh  eval_qwen3_moe_omni_transformers_torchprofile.sh
benchmarks/qwen3-omni/vllm_omni/: eval_qwen3_moe_omni.sh
docker/: Dockerfile.ci
docs/: .nav.yml  README.md
docs/api/: README.md
docs/configuration/: README.md  stage_configs.md
docs/configuration/stage_configs/: qwen2_5_omni.yaml
docs/contributing/: README.md  profiling.md
docs/contributing/model/: README.md
docs/contributing/tests/: tests_style.md
docs/design/: architecture_overview.md  index.md
docs/design/feature/: multi_request_streaming.md  ray_based_execution.md
docs/design/module/: ar_module.md  dit_module.md
docs/getting_started/: quickstart.md
docs/getting_started/installation/: gpu.md
docs/getting_started/installation/gpu/: cuda.inc.md  rocm.inc.md
docs/getting_started/installation/npu/: npu.inc.md
docs/mkdocs/hooks/: generate_api_readme.py  generate_examples.py
docs/models/: supported_models.md
docs/usage/: faq.md
docs/user_guide/: cache_dit_acceleration.md  diffusion_acceleration.md  teacache.md
docs/user_guide/examples/offline_inference/: image_to_image.md  qwen2_5_omni.md  qwen3_omni.md  text_to_image.md
examples/offline_inference/image_to_image/: image_edit.py  image_to_image.md
examples/offline_inference/qwen2_5_omni/: README.md  end2end.py  extract_prompts.py
examples/offline_inference/qwen3_omni/: README.md  end2end.py  run_multiple_prompts.sh  run_single_prompt_profile.sh  run_single_prompt_tp.sh
examples/offline_inference/text_to_image/: README.md  gradio_demo.py  text_to_image.py
examples/offline_inference/text_to_video/: text_to_video.py
examples/online_serving/qwen2_5_omni/: README.md  gradio_demo.py  openai_chat_completion_client_for_multimodal_generation.py  run_curl_multimodal_generation.sh
examples/online_serving/qwen3_omni/: README.md  gradio_demo.py  openai_chat_completion_client_for_multimodal_generation.py  run_curl_multimodal_generation.sh
tests/distributed/omni_connectors/: test_basic_connectors.py
tests/e2e/offline_inference/: conftest.py  test_cache_dit.py  test_qwen2_5_omni.py  test_qwen3_omni.py  test_t2i_model.py  test_t2v_model.py  test_teacache.py  utils.py
tests/e2e/online_serving/: test_qwen3_omni.py
tests/entrypoints/: test_omni_llm.py  test_stage_utils.py
vllm_omni/: outputs.py  patch.py  request.py  version.py
vllm_omni/config/: model.py
vllm_omni/core/sched/: omni_ar_scheduler.py  omni_generation_scheduler.py  output.py
vllm_omni/diffusion/: data.py  diffusion_engine.py  hooks.py  registry.py  request.py  scheduler.py
vllm_omni/diffusion/attention/: layer.py  selector.py
vllm_omni/diffusion/cache/: base.py  cache_dit_backend.py
vllm_omni/diffusion/model_loader/: diffusers_loader.py
vllm_omni/diffusion/utils/: hf_utils.py
vllm_omni/diffusion/worker/: gpu_worker.py
vllm_omni/distributed/omni_connectors/: adapter.py
vllm_omni/distributed/ray_utils/: utils.py
vllm_omni/engine/: __init__.py  arg_utils.py  output_processor.py  processor.py
vllm_omni/entrypoints/: async_omni.py  chat_utils.py  log_utils.py  omni.py  omni_diffusion.py  omni_llm.py  omni_stage.py  stage_utils.py  utils.py
vllm_omni/entrypoints/cli/: main.py  serve.py
vllm_omni/entrypoints/openai/: api_server.py  serving_chat.py
vllm_omni/inputs/: data.py  preprocess.py
vllm_omni/model_executor/layers/: mrope.py
vllm_omni/model_executor/model_loader/: weight_utils.py
vllm_omni/model_executor/models/: output_templates.py  registry.py
vllm_omni/model_executor/stage_configs/: qwen2_5_omni.yaml  qwen2_5_omni_3gpu.yaml  qwen2_5_omni_dual_gpu_batched.yaml  qwen2_5_omni_multiconnector.yaml  qwen2_5_omni_single_gpu.yaml  qwen2_5_omni_single_gpu_batched.yaml  qwen3_omni_moe.yaml  qwen3_omni_moe_multiconnector.yaml
vllm_omni/model_executor/stage_input_processors/: qwen2_5_omni.py  qwen3_omni.py
vllm_omni/utils/: __init__.py  platform_utils.py
vllm_omni/worker/: gpu_ar_model_runner.py  gpu_ar_worker.py  gpu_generation_model_runner.py  gpu_generation_worker.py  gpu_model_runner.py
vllm_omni/worker/npu/: npu_ar_model_runner.py  npu_generation_model_runner.py  npu_model_runner.py
(+36 files in other folders)
